--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -274,6 +274,505 @@
     "print(len(ls))\n",
     "# np.linspace?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "counts = pd.read_csv('FremontBridge.csv', index_col='Date', parse_dates=True)\n",
+    "weather = pd.read_csv('data/BicycleWeather.csv', index_col='DATE', parse_dates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fremont Bridge East Sidewalk</th>\n",
+       "      <th>Fremont Bridge West Sidewalk</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2002-12-03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-05</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-06</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-07</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-08</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-09</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-15</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-19</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-20</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-22</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-23</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-27</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-29</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-30</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002-12-31</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-02</th>\n",
+       "      <td>757.0</td>\n",
+       "      <td>724.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-03</th>\n",
+       "      <td>624.0</td>\n",
+       "      <td>649.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-04</th>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>1815.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-05</th>\n",
+       "      <td>1185.0</td>\n",
+       "      <td>1869.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-06</th>\n",
+       "      <td>829.0</td>\n",
+       "      <td>1418.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-07</th>\n",
+       "      <td>555.0</td>\n",
+       "      <td>950.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>693.0</td>\n",
+       "      <td>1183.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-09</th>\n",
+       "      <td>652.0</td>\n",
+       "      <td>677.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-10</th>\n",
+       "      <td>738.0</td>\n",
+       "      <td>730.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-11</th>\n",
+       "      <td>1078.0</td>\n",
+       "      <td>1689.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-12</th>\n",
+       "      <td>829.0</td>\n",
+       "      <td>1380.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-13</th>\n",
+       "      <td>1133.0</td>\n",
+       "      <td>1906.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-14</th>\n",
+       "      <td>1186.0</td>\n",
+       "      <td>1894.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-15</th>\n",
+       "      <td>1184.0</td>\n",
+       "      <td>1837.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-16</th>\n",
+       "      <td>810.0</td>\n",
+       "      <td>1030.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-17</th>\n",
+       "      <td>1036.0</td>\n",
+       "      <td>1198.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-18</th>\n",
+       "      <td>1618.0</td>\n",
+       "      <td>2698.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-19</th>\n",
+       "      <td>1897.0</td>\n",
+       "      <td>3053.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-20</th>\n",
+       "      <td>1817.0</td>\n",
+       "      <td>3014.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-21</th>\n",
+       "      <td>1444.0</td>\n",
+       "      <td>2535.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-22</th>\n",
+       "      <td>1179.0</td>\n",
+       "      <td>1876.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-23</th>\n",
+       "      <td>845.0</td>\n",
+       "      <td>974.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-24</th>\n",
+       "      <td>817.0</td>\n",
+       "      <td>889.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-25</th>\n",
+       "      <td>1114.0</td>\n",
+       "      <td>1843.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-26</th>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2302.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-27</th>\n",
+       "      <td>1451.0</td>\n",
+       "      <td>2339.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-28</th>\n",
+       "      <td>1455.0</td>\n",
+       "      <td>2335.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-29</th>\n",
+       "      <td>1420.0</td>\n",
+       "      <td>2168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-30</th>\n",
+       "      <td>1239.0</td>\n",
+       "      <td>1298.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-31</th>\n",
+       "      <td>1134.0</td>\n",
+       "      <td>1230.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5963 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fremont Bridge East Sidewalk  Fremont Bridge West Sidewalk\n",
+       "Date                                                                  \n",
+       "2002-12-03                           NaN                           NaN\n",
+       "2002-12-04                           NaN                           NaN\n",
+       "2002-12-05                           NaN                           NaN\n",
+       "2002-12-06                           NaN                           NaN\n",
+       "2002-12-07                           NaN                           NaN\n",
+       "2002-12-08                           NaN                           NaN\n",
+       "2002-12-09                           NaN                           NaN\n",
+       "2002-12-10                           NaN                           NaN\n",
+       "2002-12-11                           NaN                           NaN\n",
+       "2002-12-12                           NaN                           NaN\n",
+       "2002-12-13                           NaN                           NaN\n",
+       "2002-12-14                           NaN                           NaN\n",
+       "2002-12-15                           NaN                           NaN\n",
+       "2002-12-16                           NaN                           NaN\n",
+       "2002-12-17                           NaN                           NaN\n",
+       "2002-12-18                           NaN                           NaN\n",
+       "2002-12-19                           NaN                           NaN\n",
+       "2002-12-20                           NaN                           NaN\n",
+       "2002-12-21                           NaN                           NaN\n",
+       "2002-12-22                           NaN                           NaN\n",
+       "2002-12-23                           NaN                           NaN\n",
+       "2002-12-24                           NaN                           NaN\n",
+       "2002-12-25                           NaN                           NaN\n",
+       "2002-12-26                           NaN                           NaN\n",
+       "2002-12-27                           NaN                           NaN\n",
+       "2002-12-28                           NaN                           NaN\n",
+       "2002-12-29                           NaN                           NaN\n",
+       "2002-12-30                           NaN                           NaN\n",
+       "2002-12-31                           NaN                           NaN\n",
+       "2003-01-01                           NaN                           NaN\n",
+       "...                                  ...                           ...\n",
+       "2019-03-02                         757.0                         724.0\n",
+       "2019-03-03                         624.0                         649.0\n",
+       "2019-03-04                        1138.0                        1815.0\n",
+       "2019-03-05                        1185.0                        1869.0\n",
+       "2019-03-06                         829.0                        1418.0\n",
+       "2019-03-07                         555.0                         950.0\n",
+       "2019-03-08                         693.0                        1183.0\n",
+       "2019-03-09                         652.0                         677.0\n",
+       "2019-03-10                         738.0                         730.0\n",
+       "2019-03-11                        1078.0                        1689.0\n",
+       "2019-03-12                         829.0                        1380.0\n",
+       "2019-03-13                        1133.0                        1906.0\n",
+       "2019-03-14                        1186.0                        1894.0\n",
+       "2019-03-15                        1184.0                        1837.0\n",
+       "2019-03-16                         810.0                        1030.0\n",
+       "2019-03-17                        1036.0                        1198.0\n",
+       "2019-03-18                        1618.0                        2698.0\n",
+       "2019-03-19                        1897.0                        3053.0\n",
+       "2019-03-20                        1817.0                        3014.0\n",
+       "2019-03-21                        1444.0                        2535.0\n",
+       "2019-03-22                        1179.0                        1876.0\n",
+       "2019-03-23                         845.0                         974.0\n",
+       "2019-03-24                         817.0                         889.0\n",
+       "2019-03-25                        1114.0                        1843.0\n",
+       "2019-03-26                        1440.0                        2302.0\n",
+       "2019-03-27                        1451.0                        2339.0\n",
+       "2019-03-28                        1455.0                        2335.0\n",
+       "2019-03-29                        1420.0                        2168.0\n",
+       "2019-03-30                        1239.0                        1298.0\n",
+       "2019-03-31                        1134.0                        1230.0\n",
+       "\n",
+       "[5963 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counts.head()\n",
+    "counts.resample('d').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-01-02    1\n",
+       "2012-01-16    1\n",
+       "2012-02-20    1\n",
+       "2012-05-28    1\n",
+       "2012-07-04    1\n",
+       "2012-09-03    1\n",
+       "2012-10-08    1\n",
+       "2012-11-12    1\n",
+       "2012-11-22    1\n",
+       "2012-12-25    1\n",
+       "2013-01-01    1\n",
+       "2013-01-21    1\n",
+       "2013-02-18    1\n",
+       "2013-05-27    1\n",
+       "2013-07-04    1\n",
+       "2013-09-02    1\n",
+       "2013-10-14    1\n",
+       "2013-11-11    1\n",
+       "2013-11-28    1\n",
+       "2013-12-25    1\n",
+       "2014-01-01    1\n",
+       "2014-01-20    1\n",
+       "2014-02-17    1\n",
+       "2014-05-26    1\n",
+       "2014-07-04    1\n",
+       "2014-09-01    1\n",
+       "2014-10-13    1\n",
+       "2014-11-11    1\n",
+       "2014-11-27    1\n",
+       "2014-12-25    1\n",
+       "2015-01-01    1\n",
+       "2015-01-19    1\n",
+       "2015-02-16    1\n",
+       "2015-05-25    1\n",
+       "2015-07-03    1\n",
+       "2015-09-07    1\n",
+       "2015-10-12    1\n",
+       "2015-11-11    1\n",
+       "2015-11-26    1\n",
+       "2015-12-25    1\n",
+       "2016-01-01    1\n",
+       "Name: holiday, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pandas.tseries.holiday import USFederalHolidayCalendar\n",
+    "cal = USFederalHolidayCalendar()\n",
+    "holidays = cal.holidays('2012', '2016')\n",
+    "pd.Series(1, index=holidays, name='holiday')"
+   ]
   }
  ],
  "metadata": {
